--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,91 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_above="@id/bottom_section"
-        android:id="@+id/email_sign_up_section"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <EditText
-            android:id="@+id/signup_email_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Email"/>
-        <EditText
-            android:id="@+id/signup_password_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"/>
-        <Button
-            android:id="@+id/signin_email_signin_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sign In"/>
-    </LinearLayout>
-    <LinearLayout
-        android:visibility="gone"
-        android:layout_above="@id/bottom_section"
-        android:id="@+id/phone_sign_up_section"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <EditText
-            android:id="@+id/signup_phone_et"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Phone number"/>
-        <Button
-            android:id="@+id/signup_send_verification_code_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Send Verification Code"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_centerVertical="true"
-        android:id="@+id/bottom_section"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/signin_choose_email_or_phone_section_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Phone Sign In"/>
+        android:layout_height="match_parent">
         <LinearLayout
-            android:background="#FFFFFF"
+            android:visibility="visible"
+            android:layout_above="@id/bottom_section"
+            android:id="@+id/email_sign_in_section"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
-            <com.google.android.gms.common.SignInButton
-                android:id="@+id/signin_google_signin_btn"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="40dp"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <EditText
+                android:id="@+id/sign_in_email_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Email"/>
+            <EditText
+                android:id="@+id/sign_in_password_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"/>
+            <Button
+                android:id="@+id/sign_in_email_signin_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sign In"/>
+        </LinearLayout>
+        <LinearLayout
+            android:visibility="gone"
+            android:layout_above="@id/bottom_section"
+            android:id="@+id/phone_sign_in_section"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <LinearLayout
-                android:layout_weight="1"
-                android:background="#3C5A99"
-                android:layout_width="0dp"
-                android:layout_height="match_parent">
-                <com.facebook.login.widget.LoginButton
-                    android:id="@+id/signin_facebook_signin_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:textStyle="bold"
+                    android:textColor="@color/colorGreen"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:text="+88"/>
+                <EditText
+                    android:textSize="25sp"
+                    android:id="@+id/sign_in_phone_et"
+                    android:layout_weight="2"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:hint="01#########"/>
+                <Button
+                    android:id="@+id/sign_in_phone_send_verification_code_btn"
                     android:layout_weight="1"
-                    android:gravity="center"/>
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Send Code"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <EditText
+                    android:textSize="25sp"
+                    android:id="@+id/sign_in_phone_verification_code_et"
+                    android:enabled="false"
+                    android:gravity="center"
+                    android:layout_weight="2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Verification code"/>
+
+                <Button
+                    android:id="@+id/sign_in_phone_signin_confirm_btn"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:text="Confirm" />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_centerVertical="true"
+            android:id="@+id/bottom_section"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <Button
+                android:id="@+id/sign_in_choose_email_or_phone_section_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Phone Sign In"/>
+            <LinearLayout
+                android:background="#FFFFFF"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:orientation="horizontal">
+                <com.google.android.gms.common.SignInButton
+                    android:id="@+id/sign_in_google_signin_btn"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"/>
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:background="#3C5A99"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+                    <com.facebook.login.widget.LoginButton
+                        android:id="@+id/sign_in_facebook_signin_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"/>
+                </LinearLayout>
+
             </LinearLayout>
 
+            <Button
+                android:id="@+id/sign_in_need_account_signup_btn"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Need Account ? Sign Up"
+                android:textAllCaps="false" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/signin_need_account_signup_btn"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Need Account ? Sign Up"
-            android:textAllCaps="false" />
-    </LinearLayout>
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
