--- a/app/src/main/res/layout/activity_doctor_profile_editor_one.xml
+++ b/app/src/main/res/layout/activity_doctor_profile_editor_one.xml
@@ -57,11 +57,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="No of year practicing"/>
+        <EditText
+            android:id="@+id/available_area_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Available Area"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <EditText
+                android:hint="Select category"
                 android:layout_weight="4"
                 android:id="@+id/doctor_category_et"
                 android:layout_width="0dp"
