--- a/app/src/main/res/layout/activity_doctor_profile_editor_two.xml
+++ b/app/src/main/res/layout/activity_doctor_profile_editor_two.xml
@@ -54,6 +54,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <TextView
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:gravity="center"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:hint="Appintment Fee"/>
+        <EditText
+            android:id="@+id/appointment_fee_et"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <LinearLayout
             android:id="@+id/av_staring_time_section"
             android:background="@color/colorPrimary"
