--- a/app/src/main/res/layout/patient_profile_view.xml
+++ b/app/src/main/res/layout/patient_profile_view.xml
@@ -145,15 +145,10 @@
             android:layout_height="wrap_content"
             android:text="Edit Profile"/>
         <Button
-            android:id="@+id/patient_current_appointment_btn"
+            android:id="@+id/patient_appointment_history_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Current Appointment"/>
-        <Button
-            android:id="@+id/patient_past_appointment_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Past Appointment"/>
+            android:text="Appointment History"/>
         <Button
             android:id="@+id/patient_stored_history_btn"
             android:layout_width="match_parent"
