--- a/app/src/main/res/layouts/patient_layouts/layout/activity_doctor_profile_visit.xml
+++ b/app/src/main/res/layouts/patient_layouts/layout/activity_doctor_profile_visit.xml
@@ -31,9 +31,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="BMDC Registration Number : "/>
+                android:text="Medical College Studied : "/>
             <TextView
-                android:id="@+id/bmdc_reg_tv"
+                android:id="@+id/studied_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
@@ -57,9 +57,22 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Medical College Studied : "/>
+                android:text="Degree Completed : "/>
             <TextView
-                android:id="@+id/studied_tv"
+                android:id="@+id/degree_completed_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BMDC Registration Number : "/>
+            <TextView
+                android:id="@+id/bmdc_reg_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
@@ -89,8 +102,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Available Area : "/>
+            <TextView
+                android:id="@+id/available_area_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
         <ListView
-            android:id="@+id/list_view_1"
+            android:id="@+id/list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
