--- a/app/src/main/res/layouts/patient_layouts/layout/model_my_appointment_list.xml
+++ b/app/src/main/res/layouts/patient_layouts/layout/model_my_appointment_list.xml
@@ -4,33 +4,42 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorWhite">
+    android:background="@color/colorGreen">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <LinearLayout
+            android:layout_gravity="center"
             android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
+                android:textSize="20sp"
+                android:textColor="#000000"
                 android:id="@+id/name_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Doctor Name"/>
             <TextView
+                android:textSize="18sp"
+                android:textColor="#000000"
                 android:id="@+id/hospital_name_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Hospital Name"/>
             <TextView
+                android:textSize="18sp"
+                android:textColor="#000000"
                 android:id="@+id/appointment_date_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Appointment Date"/>
             <TextView
+                android:textSize="18sp"
+                android:textColor="#000000"
                 android:id="@+id/appointment_time_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -43,11 +52,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textColor="#000000"
                 android:id="@+id/appointment_fee_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Appointment Fee"/>
             <TextView
+                android:textSize="18sp"
+                android:textColor="#000000"
                 android:id="@+id/appointment_remaining_status"
                 android:gravity="center"
                 android:layout_width="match_parent"
