--- a/app/src/main/res/layouts/account_layouts/layout/activity_sign_in.xml
+++ b/app/src/main/res/layouts/account_layouts/layout/activity_sign_in.xml
@@ -14,11 +14,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <EditText
+                android:imeOptions="actionNext"
                 android:id="@+id/sign_in_email_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"/>
             <EditText
+                android:imeOptions="actionDone"
                 android:id="@+id/sign_in_password_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -48,6 +50,7 @@
                     android:textSize="25sp"
                     android:text="+88"/>
                 <EditText
+                    android:imeOptions="actionDone"
                     android:textSize="25sp"
                     android:id="@+id/sign_in_phone_et"
                     android:layout_weight="2"
@@ -66,6 +69,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <EditText
+                    android:imeOptions="actionDone"
                     android:textSize="25sp"
                     android:id="@+id/sign_in_phone_verification_code_et"
                     android:enabled="false"
