--- a/app/src/main/res/layouts/account_layouts/layout/activity_sign_up.xml
+++ b/app/src/main/res/layouts/account_layouts/layout/activity_sign_up.xml
@@ -11,7 +11,7 @@
         android:layout_height="0dp"
         android:orientation="vertical">
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/signup_type_civ"
+            android:id="@+id/image_civ"
             android:layout_gravity="center_horizontal"
             android:layout_width="150dp"
             android:layout_height="150dp"
@@ -28,7 +28,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/signup_patient_btn"
+                android:id="@+id/patient_btn"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
                 android:text="Patient" />
 
             <Button
-                android:id="@+id/signup_doctor_btn"
+                android:id="@+id/doctor_btn"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -57,27 +57,30 @@
             <LinearLayout
                 android:visibility="visible"
                 android:layout_above="@id/bottom_section"
-                android:id="@+id/email_sign_up_section"
+                android:id="@+id/email_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <EditText
-                    android:id="@+id/signup_email_et"
+                    android:id="@+id/email_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"/>
+                    android:hint="Email"
+                    android:imeOptions="actionNext"/>
                 <EditText
-                    android:id="@+id/signup_password_et"
+                    android:id="@+id/password_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"/>
+                    android:hint="Password"
+                    android:imeOptions="actionNext"/>
                 <EditText
-                    android:id="@+id/signup_retype_password_et"
+                    android:id="@+id/retype_password_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Retype Password"/>
+                    android:hint="Retype Password"
+                    android:imeOptions="actionDone"/>
                 <Button
-                    android:id="@+id/signup_email_signup_btn"
+                    android:id="@+id/email_confirm_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Sign Up"/>
@@ -85,7 +88,7 @@
             <LinearLayout
                 android:visibility="gone"
                 android:layout_above="@id/bottom_section"
-                android:id="@+id/phone_sign_up_section"
+                android:id="@+id/phone_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -99,15 +102,16 @@
                         android:text="+88"
                         android:textSize="25sp"/>
                     <EditText
+                        android:imeOptions="actionDone"
                         android:textSize="25sp"
-                        android:id="@+id/signup_phone_et"
+                        android:id="@+id/phone_et"
                         android:gravity="center"
                         android:layout_weight="2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:hint="01#########"/>
                     <Button
-                        android:id="@+id/signup_send_verification_code_btn"
+                        android:id="@+id/send_verification_code_btn"
                         android:layout_weight="1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -119,9 +123,10 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <EditText
+                        android:imeOptions="actionDone"
                         android:enabled="false"
                         android:textSize="25sp"
-                        android:id="@+id/signup_phone_verification_code_et"
+                        android:id="@+id/verification_code_et"
                         android:gravity="center"
                         android:layout_weight="2"
                         android:layout_width="0dp"
@@ -130,7 +135,7 @@
                     <Button
                         android:enabled="false"
                         android:textSize="18sp"
-                        android:id="@+id/signup_phone_confirm_btn"
+                        android:id="@+id/phone_confirm_btn"
                         android:layout_weight="1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -144,7 +149,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <Button
-                    android:id="@+id/signup_choose_email_or_phone_section_btn"
+                    android:id="@+id/choose_email_or_phone_section_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Phone Sign Up" />
@@ -155,7 +160,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/signup_google_signup_btn"
+                        android:id="@+id/google_sign_in_or_up_btn"
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="0dp"
                         android:layout_height="40dp"
@@ -171,7 +176,7 @@
                         android:background="#3C5A99">
 
                         <com.facebook.login.widget.LoginButton
-                            android:id="@+id/signup_facebook_signup_btn"
+                            android:id="@+id/facebook_sign_in_or_up_btn"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_gravity="center"
@@ -180,7 +185,7 @@
                     </LinearLayout>
                 </LinearLayout>
                 <Button
-                    android:id="@+id/signup_already_have_an_account_signup_btn"
+                    android:id="@+id/goto_sign_in_or_up_btn"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
