--- a/app/src/main/res/layouts/patient_layouts/layout/fragment_doctor_list.xml
+++ b/app/src/main/res/layouts/patient_layouts/layout/fragment_doctor_list.xml
@@ -12,6 +12,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:iconifiedByDefault="false"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:textSize="25sp"
+            android:gravity="center"
+            android:id="@+id/filter_tv"
+            android:layout_weight="5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="Search with disease"/>
+        <Spinner
+            android:visibility="gone"
+            android:id="@+id/spinner"
+            android:layout_weight="5"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:entries="@array/doctor_category_array"/>
+        <ImageView
+            android:id="@+id/filter_btn"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:src="@drawable/spinner"/>
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
